--- a/style.css
+++ b/style.css
@@ -161,6 +161,12 @@ table {
   padding: 10px;
   font-weight: bold;
   font-size: 18px;
+  transition: all 1s ease;
+}
+
+table tr {
+  margin-bottom: 5px;
+  padding: 3px;
 }
 
 .hide-table {
@@ -169,30 +175,21 @@ table {
 
 table thead tr td {
   border: 1px solid firebrick;
+  padding: 5px;
+  border-radius: 3px;
 }
 table tbody tr td {
   border: 1px solid firebrick;
+  padding: 5px;
+  border-radius: 3px;
 }
 
 @media (max-width: 910px) {
   table {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-  }
-  table thead tr {
-    display: flex;
-    justify-content: space-around;
-  }
-  table tbody tr {
-    display: flex;
-    justify-content: space-around;
-  }
-  table tbody tr td {
     width: 100%;
   }
   table thead tr td {
-    width: 100%;
+    max-width: 20%;
   }
 }
 
@@ -460,6 +457,36 @@ table tbody tr td {
   border-radius: 5px;
 }
 
+.search-wrong-val {
+  display: none;
+  position: absolute;
+  top: 60%;
+  left: 5px;
+  width: 100px;
+  background-color: brown;
+  color: aliceblue;
+  font-weight: 700;
+  border-radius: 5px;
+}
+
+.show-search-wrong-msg {
+  display: block;
+  animation-name: rotatemsg;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+}
+@keyframes rotatemsg {
+  0% {
+    transform: translate(0) rotate(0deg);
+  }
+  50% {
+    transform: translate(10px) rotate(360deg);
+  }
+  100% {
+    transform: translate(0px) rotate(0deg);
+  }
+}
+
 .show-valid-search-msg {
   display: block;
 }
@@ -562,6 +589,7 @@ table tbody tr td {
 }
 
 .bay-form-container {
+  position: relative;
   max-width: 500px;
   background-color: #6a93cb;
   background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
@@ -572,6 +600,36 @@ table tbody tr td {
   align-items: flex-start;
   padding: 10px;
   border-radius: 5px;
+}
+
+.wrongamountmsg {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background-color: #494b4e;
+  padding: 5px;
+  color: #0093e9;
+  font-weight: bold;
+  display: none;
+}
+
+.wrongamountanime {
+  animation-name: wrongamount;
+  animation-duration: 2s;
+  animation-iteration-count: 3;
+  display: block;
+}
+
+@keyframes wrongamount {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .buy-this {
@@ -831,4 +889,35 @@ table tbody tr td {
   cursor: pointer;
   border-radius: 3px;
   margin: 10px;
+}
+
+.delete-btn {
+  border: none;
+  color: white;
+  padding: 10px;
+  border-radius: 2px;
+  cursor: pointer;
+  background-color: brown;
+  transition: all 1s ease;
+}
+.delete-btn:hover {
+  background-color: red;
+}
+
+.red-row {
+  animation-name: rowanimation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rowanimation {
+  0% {
+    background-color: #ff3c3c;
+  }
+  50% {
+    background-color: #963636;
+  }
+  100% {
+    background-color: #ff3c3c;
+  }
 }
